--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -30,6 +30,11 @@ a{
 }
 .leftSide img{
     height: 50%;
+    filter: drop-shadow( 0px 1px 3px rgba(0, 0, 0, .5));
+    transition: 0.4s;
+}
+.leftSide img:hover{
+    filter: drop-shadow( 0px 1px 5px rgba(255, 255, 255, 1));
 }
 .navbar-nav{
     display:flex;
